# omni-md

./: .gitignore  README.md  config.example.yml  docker-compose.yml
docs/: dev-database-workflow.md  epic-worksession-workflow.md  issue-tracker-workflow.md  local-dev-testing-workflow.md  wiki-update-workflow.md
md-relay-worker/: Cargo.toml  Dockerfile
md-relay-worker/src/: config.rs  db.rs  git_engine.rs  main.rs  webhook.rs
omni-console/: Dockerfile  index.html  package-lock.json  package.json
omni-console/src/: App.tsx  index.css
omni-console/src/components/: Header.tsx  Sidebar.tsx
omni-console/src/pages/: HistoryView.tsx  MappingsView.tsx
